[Accessibility] Addressing color contrast issues.

--- a/apidoc.css
+++ b/apidoc.css
@@ -85,7 +85,7 @@ body#md {
 
 /* link styling */
 .md a:link, .md a:visited {
-    color: #e87a0d;
+    color: #b25c08;
 }
 
 /* inline and block code */
